# --1

./: .gitignore  开发者交接文档.md  用户使用说明书.md
backend/: pyproject.toml
backend/app/: auth_utils.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  candidates.py  reports.py  resume.py  statistics.py  users.py
backend/app/services/: ai_service.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppNav.tsx  ResumeParseDialog.tsx
frontend/src/components/ui/: alert-dialog.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  hover-card.tsx  popover.tsx  sheet.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: ChangePasswordPage.tsx  DailyReportPage.tsx  DashboardPage.tsx  DataManagementPage.tsx  EliminationLedgerPage.tsx  LoginPage.tsx  ProfilePage.tsx  RecommendationLedgerPage.tsx  StatisticsPage.tsx  WeeklyReportPage.tsx
frontend/src/stores/: authStore.ts
frontend/src/types/: index.ts
