[project]
name = "v2.0-lite-backend"
version = "1.0.0"
description = "招聘简历数据自动化台账 v2.0 - FastAPI Backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.17",
    "openpyxl>=3.1.5",
    "httpx>=0.27.0",
]
